--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
       </div>
       <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
         <div class="rounded-lg h-64 overflow-hidden">
-          <img alt="content" class="object-cover object-center h-full w-full" src="/Data/Logo.png">
+          <img alt="content" class="object-cover object-center h-full w-full" src="/Data/HTML.png">
         </div>
         <h2 class="text-xl font-medium title-font text-white mt-5">Frontend Developer</h2>
         <p class="text-base leading-relaxed mt-2">I have completed a Frontend Development course from various platforms, including Code with Harry and Apna College. This course is far more than a single educational experience; it is a crucial foundation for any developer, as it delves deeply into the core technologies of HTML, CSS, and JavaScript. Mastery of these languages is essential for creating dynamic and responsive web applications. Throughout the course, I engaged with comprehensive video tutorials and invested significant time in hands-on practice with fellow learners. This rigorous approach has not only solidified my understanding of frontend development but also equipped me with the skills to build visually appealing and functional websites. The knowledge gained from this course is fundamental to navigating the ever-evolving landscape of web development and staying ahead in the industry.</p>
       </div>
       <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
         <div class="rounded-lg h-64 overflow-hidden">
-          <img alt="content" class="object-cover object-center h-full w-full" src="/Data/GenAI-Chatbots-Marketing-1024x597.png">
+          <img alt="content" class="object-cover object-center h-full w-full" src="/Data/ChatBot.png">
         </div>
         <h2 class="text-xl font-medium title-font text-white mt-5">Generative AI & Chatbot</h2>
         <p class="text-base leading-relaxed mt-2">I am currently pursuing a degree in Generative AI and Chatbot Development from Saylani Mass IT Training, a challenging and advanced one-year program. This course is pivotal in today's tech landscape, as it addresses the rapidly growing fields of artificial intelligence and conversational technology. Generative AI enables the creation of systems that can generate human-like text and responses, while chatbot development focuses on building interactive, intelligent agents that enhance user experiences. Mastering these skills is essential for developing innovative solutions and staying competitive in the tech industry. The knowledge and expertise gained from this program are crucial for designing sophisticated AI applications and harnessing the power of AI to drive technological advancements.</p>
