--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
 <script type="module">
   import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
   Chatbot.init({
-      chatflowid: "5658b040-3cb7-4f9a-848b-67500e17a1fe",
-      apiHost: "https://flowise-ai-8vhc.onrender.com",
+      chatflowid: "34683d92-379a-46fa-88e9-a638963d8bda",
+      apiHost: "https://flowise-ai-production-f050.up.railway.app",
       chatflowConfig: {
           /* Chatflow Config */
       },
@@ -345,9 +345,9 @@
           chatWindow: {
               showTitle: true,
               showAgentMessages: true,
-              title: 'Personal Portfolio Assistant',
+              title: 'Portfolio Assistant',
               titleAvatarSrc: 'https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/google-messages.svg',
-              welcomeMessage: 'Hello! This is custom welcome message',
+              welcomeMessage: 'Hello! Welcome to Ahmed Raza Portfolio, How can I help you?',
               errorMessage: 'This is a custom error message',
               backgroundColor: '#ffffff',
               backgroundImage: 'enter image path or link',
@@ -356,7 +356,7 @@
               fontSize: 16,
               starterPrompts: [
                   "What is a bot?",
-                  "Who is Ahmed Raza?"
+                  "Who are you?"
               ],
               starterPromptFontSize: 15,
               clearChatOnReload: false,
@@ -398,13 +398,12 @@
                   textColor: '#303235',
                   text: 'Powered by',
                   company: 'Ahmed Raza',
-                  companyLink: 'https://flowiseai.com'
+                  companyLink: 'https://linktr.ee/AhmedRaza04'
               }
           }
       }
   })
 </script>
-
 <!-- My Portfolio Assistant End -->
 
 </body>
