--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
               iconColor: 'white',
               customIconSrc: 'https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/google-messages.svg',
               autoWindowOpen: {
-                  autoOpen: true,
+                  autoOpen: false,
                   openDelay: 2,
                   autoOpenOnMobile: false
               }
@@ -351,7 +351,7 @@
               errorMessage: 'This is a custom error message',
               backgroundColor: '#ffffff',
               backgroundImage: 'enter image path or link',
-              height: 700,
+              height: 500,
               width: 400,
               fontSize: 16,
               starterPrompts: [
